err/cloudflare.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CloudFlare'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cli4'...
Listing './lib/python3.5/site-packages/cloudflare-1.8.1.egg-info'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/example_are_zones_ipv6.py'...
***   File "./lib/python3.5/site-packages/examples/example_are_zones_ipv6.py", line 49
    print zone_id, ipv6_value, zone_name, '(now updating... off -> on)'
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/example_are_zones_ipv6_simple.py'...
***   File "./lib/python3.5/site-packages/examples/example_are_zones_ipv6_simple.py", line 20
    print zone_id, ipv6_on, zone_name
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/example_certificates.py'...
***   File "./lib/python3.5/site-packages/examples/example_certificates.py", line 48
    print '%-40s %-10s %-32s    %-15s [ %s ]' % (
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/example_create_zone_and_populate.py'...
***   File "./lib/python3.5/site-packages/examples/example_create_zone_and_populate.py", line 23
    print 'Create zone %s ...' % (zone_name)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/example_delete_zone_entry.py'...
***   File "./lib/python3.5/site-packages/examples/example_delete_zone_entry.py", line 44
    print 'ZONE:', zone_id, zone_name
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/example_dns_export.py'...
***   File "./lib/python3.5/site-packages/examples/example_dns_export.py", line 46
    print l
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/example_dnssec_settings.py'...
***   File "./lib/python3.5/site-packages/examples/example_dnssec_settings.py", line 40
    print zone_id, zone_name
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/example_ips.py'...
***   File "./lib/python3.5/site-packages/examples/example_ips.py", line 21
    print 'ipv4_cidrs count = ', len(ips['ipv4_cidrs'])
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/example_paging_thru_zones.py'...
***   File "./lib/python3.5/site-packages/examples/example_paging_thru_zones.py", line 34
    print "COUNT=%d PAGE=%d PER_PAGE=%d TOTAL_COUNT=%d TOTAL_PAGES=%d -- %s" % (count, page, per_page, total_count, total_pages, domains)
                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/example_proxied.py'...
***   File "./lib/python3.5/site-packages/examples/example_proxied.py", line 47
    print "Zone:\t%s %s" % (zone_id, zone_name)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/example_settings.py'...
***   File "./lib/python3.5/site-packages/examples/example_settings.py", line 39
    print zone_id, zone_name
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/example_update_dynamic_dns.py'...
***   File "./lib/python3.5/site-packages/examples/example_update_dynamic_dns.py", line 58
    print 'IGNORED: %s %s ; wrong address family' % (dns_name, old_ip_address)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/example_user.py'...
***   File "./lib/python3.5/site-packages/examples/example_user.py", line 16
    print 'USER:'
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/example_with_usage.py'...
***   File "./lib/python3.5/site-packages/examples/example_with_usage.py", line 26
    print zone['id'], zone['name']
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/example_zones.py'...
***   File "./lib/python3.5/site-packages/examples/example_zones.py", line 46
    print zone_id, zone_name, zone_owner, zone_plan
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
